argocd/applications/staging-workload/liveclasses/prosody-deployment.yaml
# Prosody Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  namespace: liveclasses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody:prosody-13.0.2
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "600m"
              memory: "1Gi"
          ports:
            - containerPort: 5222
            - containerPort: 5280
            - containerPort: 5347
          volumeMounts:
            - name: prosody-config
              mountPath: /config/conf.d/streaming-stg.talentos.darey.io.cfg.lua
              subPath: streaming-stg.talentos.darey.io.cfg.lua
      volumes:
        - name: prosody-config
          configMap:
            name: prosody-custom-config
