argocd/applications/staging-workload/liveclasses/jvb-deployment.yaml
---
# JVB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  namespace: liveclasses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jibri
                        - jvb
                topologyKey: kubernetes.io/hostname
      containers:
        - name: jvb
          image: jitsi/jvb:jvb-2.3-245-g6ddd4f41-1
          resources:
            requests:
              cpu: "600m"
              memory: "1Gi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
          ports:
            - containerPort: 10000
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
              name: stats
          volumeMounts:
            - name: jvb-config
              mountPath: /config/jvb.conf
              subPath: jvb.conf
      volumes:
        - name: jvb-config
          configMap:
            name: jvb-config

---
apiVersion: v1
kind: Service
metadata:
  name: jvb
  namespace: liveclasses
spec:
  selector:
    app: jvb
  ports:
    - protocol: UDP
      port: 10000
      targetPort: 10000
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: stats
  type: ClusterIP
